# Bounce

./: .gitignore  CMakeLists.txt  CMakeSettings.json
client/include/: adapter.hpp
client/src/: adapter.cpp  main.cpp
